sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: not found: value n
  for (i<-1 to n-1) {
               ^AlgInsertionSort:12: error: not found: value v
    copie(v,j)
          ^